[project]
name = "nonebot-linc"
version = "0.1.0"
description = "nonebot-linc"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    # { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    # { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    # { name = "Console", module_name = "nonebot.adapters.console" },
    # { name = "Discord", module_name = "nonebot.adapters.discord" }
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    # {name = "QQ", module_name = "nonebot.adapters.qq"}
]
plugins = ["nonebot_plugin_status", "nonebot_plugin_analysis_bilibili"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
