[project]
name = "nonebot-linc"
version = "0.1.0"
description = "nonebot-linc"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    # { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    # { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    # { name = "Console", module_name = "nonebot.adapters.console" },
    # { name = "Discord", module_name = "nonebot.adapters.discord" }
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    # {name = "QQ", module_name = "nonebot.adapters.qq"}
]
                                        # 优先级：拦截器 > 记录缓存 > 别名/篡改器 > 其他
plugins = [                             # ------ 社区插件 ------
    "nonebot_plugin_alconna",           # ALC
    # "nonebot_plugin_access_control",  # 权限控制(需要指定数据库)
    # supermaster类别
    #"nonebot_plugin_status",            # 服务器状态插件
    # 非命令信息响应器
    #"nonebot_plugin_analysis_bilibili", # bilibili链接解析
    #"nonebot_plugin_repeater",          # 复读机
    # "nonebot_plugin_easymarkdown",    # 转md
    "nonebot_plugin_deepseek"
    
]
builtin_plugins = [                     # ------ 内置插件 ------
    "echo"                              # 打印插件
]
plugin_dirs = [                         # ------ 个人插件 ------ (拆开方便随时注释禁用)
    "src/nonebot-plugin-blocker",       # 拦截
    "src/nonebot-plugin-debug",         # debug
    "src/nonebot-plugin-forward",       # 网络转发
]
